# communication_nfc

./: README.en.md  README.md  README_zh.md  nfc_standard.gni  ohos.build
adapter/interfaces/kits/nfc/: BUILD.gn
adapter/services/: BUILD.gn
adapter/services/include/: nfc_adapter_utils.h  nfc_agent_adapter_utils.h  nfc_cardemulation_adapter_utils.h  nfc_secureelement_adapter_utils.h  nfc_tag_adapter_utils.h
adapter/services/src/: nfc_adapter_utils.cpp
interfaces/kits/nfckit/: BUILD.gn
interfaces/kits/nfckit/test/: BUILD.gn
interfaces/native_cpp/nfc_standard/: BUILD.gn
interfaces/native_cpp/nfc_standard/include/: iapp_callback.h  iso15693_tag.h  isodep_tag.h  loghelper.h  mifare_classic_tag.h  mifare_ultralight_tag.h  ndef_formatable_tag.h  ndef_message.h  ndef_tag.h  nfc_agent.h  nfc_map.h  nfc_sdk_common.h  tag.h
interfaces/native_cpp/nfc_standard/src/: app_callback_proxy.cpp  app_callback_proxy.h  app_callback_stub.cpp  app_callback_stub.h  nfc_agent.cpp  nfc_basic_proxy.cpp  nfc_basic_proxy.h  nfc_map.cpp  nfc_sdk_common.cpp  nfc_service_proxy.cpp  nfc_service_proxy.h  tag_session_proxy.cpp  tag_session_proxy.h
interfaces/native_cpp/nfc_standard/test/: BUILD.gn
interfaces/native_cpp/osal/: BUILD.gn
interfaces/native_cpp/osal/include/: bundle_manager.h  context.h  key_guard_manager.h  loghelper.h  osal_bundle_info.h  power_manager.h  resources.h  shared_preferences.h
interfaces/native_cpp/osal/src/: bundle_manager.cpp  context.cpp  key_guard_manager.cpp  power_manager.cpp  resources.cpp  shared_preferences.cpp
interfaces/native_cpp/se_standard/: BUILD.gn
interfaces/native_cpp/se_standard/include/: channel.h  isecure_element_channel.h  isecure_element_reader.h  isecure_element_service.h  isecure_element_session.h  reader.h  se_service.h  session.h
interfaces/native_cpp/se_standard/src/: channel.cpp  reader.cpp  se_service.cpp  secure_element_channel_proxy.cpp  secure_element_channel_proxy.h  secure_element_reader_proxy.cpp  secure_element_reader_proxy.h  secure_element_service_proxy.cpp  secure_element_service_proxy.h  secure_element_session_proxy.cpp  secure_element_session_proxy.h  session.cpp
interfaces/native_cpp/se_standard/test/: BUILD.gn
prebuilts/librarys/nfc_st/arm/: BUILD.gn
services/nfc/: BUILD.gn
services/nfc/etc/init/: BUILD.gn  nfcsa.rc
services/nfc/include/: i_nfc_manager.h  nfc_error.h  nfc_log.h  nfc_manager_proxy.h  nfc_manager_service.h  nfc_manager_stub.h  nfc_utils.h
services/nfc/src/: nfc_manager_proxy.cpp  nfc_manager_service.cpp  nfc_manager_stub.cpp
services/nfc/src/card_emulation/: card_emulation.cpp  card_emulation.h
services/nfc/src/nfc_agent/: app_callback_skeleton.cpp  app_callback_skeleton.h  nfc_agent.cpp  nfc_agent.h  profile_parcel.cpp  profile_parcel.h
services/nfc/src/secure_element/: se_service_callback_skeleton.cpp  se_service_callback_skeleton.h  secure_element.cpp  secure_element.h
services/nfc/src/tag/: tag_session.cpp  tag_session.h
services/nfc/test/: BUILD.gn
services/nfc/test/unittest/: nfc_sa_unit_test.cpp  nfc_sa_unit_test.h
services/nfc_standard/: BUILD.gn  README.md  nfc_standard.gni
services/nfc_standard/etc/init/: BUILD.gn  nfcsa.rc
services/nfc_standard/include/: infc_agent_service.h  itag_session.h
services/nfc_standard/src/: infc_service.h  nfc_agent_service.cpp  nfc_agent_service.h  nfc_discovery_params.cpp  nfc_discovery_params.h  nfc_permissions.cpp  nfc_permissions.h  nfc_service.cpp  nfc_service.h  nfc_service_define.h  nfc_service_handler.cpp  nfc_service_handler.h  nfc_service_manager.cpp  nfc_service_manager.h  nfc_service_stub.cpp  nfc_service_stub.h  tag_session_stub.cpp  tag_session_stub.h  watch_dog.cpp  watch_dog.h
services/nfc_standard/src/utils/: common_utils.cpp  common_utils.h  foreground_utils.cpp  foreground_utils.h  screen_state_helper.cpp  screen_state_helper.h  synchronize_event.cpp  synchronize_event.h
services/nfc_standard/test/: BUILD.gn
services/nfc_standard/test/nfc_service/: BUILD.gn
services/nfc_standard/test/unittest/: BUILD.gn
services/se_standard/: BUILD.gn
services/se_standard/include/: se_common_exception.h
services/se_standard/src/: access_control_enforcer.cpp  access_control_enforcer.h  access_rule_application_controller.cpp  access_rule_application_controller.h  access_rule_cache.cpp  access_rule_cache.h  access_rule_files_channel.cpp  access_rule_files_channel.h  access_rule_files_controller.cpp  access_rule_files_controller.h  apdu_command_validator.cpp  apdu_command_validator.h  channel_access_rule.cpp  channel_access_rule.h  se_channel.cpp  se_channel.h  se_end_service.cpp  se_end_service.h  se_service_manager.cpp  se_service_manager.h  secure_element_channel.cpp  secure_element_channel.h  secure_element_channel_stub.cpp  secure_element_channel_stub.h  secure_element_reader.cpp  secure_element_reader.h  secure_element_reader_stub.cpp  secure_element_reader_stub.h  secure_element_service.cpp  secure_element_service.h  secure_element_service_stub.cpp  secure_element_service_stub.h  secure_element_session.cpp  secure_element_session.h  secure_element_session_stub.cpp  secure_element_session_stub.h  terminal.cpp  terminal.h
services/se_standard/src/general-data-objects/: aid_ref_do.cpp  aid_ref_do.h  apdu_ar_do.cpp  apdu_ar_do.h  ar_do.cpp  ar_do.h  ber_tlv.cpp  ber_tlv.h  hash_ref_do.cpp  hash_ref_do.h  nfc_ar_do.cpp  nfc_ar_do.h  pkg_ref_do.cpp  pkg_ref_do.h  ref_ar_do.cpp  ref_ar_do.h  ref_do.cpp  ref_do.h  response_all_ar_do.cpp  response_all_ar_do.h  response_refresh_tag_do.cpp  response_refresh_tag_do.h
services/se_standard/src/pkcs15/: dir.h  (+15 more)
services/se_standard/test/: BUILD.gn
services/st_service/: BUILD.gn
services/st_service/include/: isecure_element.h
services/st_service/src/: isecure_element.cpp  se_callback_proxy.cpp  se_callback_proxy.h  se_callback_stub.cpp  se_callback_stub.h  st_se_service.cpp  st_se_service.h  st_se_service_manager.cpp  st_se_service_manager.h  st_se_service_proxy.cpp  st_se_service_proxy.h  st_se_service_stub.cpp  st_se_service_stub.h
services/st_service/test/: BUILD.gn
(+409 files in other folders)
