# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

SUBSYSTEM_DIR = "//foundation/communication/nfc"
NFC_ADAPTER_ROOT = "$SUBSYSTEM_DIR/adapter"

ohos_static_library("nfc_adapter_utils") {
  sources = [ "$NFC_ADAPTER_ROOT/services/src/nfc_adapter_utils.cpp" ]

  include_dirs = [
    "$NFC_ADAPTER_ROOT/services/include",
    "//utils/native/base/include",
  ]

  deps = [ "//utils/native/base:utils" ]
}