# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

SUBSYSTEM_DIR = "//foundation/communication"
NFC_ROOT_DIR = "$SUBSYSTEM_DIR/nfc"
NFC_OSAL_DIR = "$NFC_ROOT_DIR/interfaces/native_cpp/osal"
NFC_AGENT_DIR = "$NFC_ROOT_DIR/interfaces/native_cpp/nfc_standard"
NFC_STANDARD_DIR = "$NFC_ROOT_DIR/services/nfc_standard"
NFC_ST_DIR = "$NFC_ROOT_DIR/prebuilts/librarys/nfc_st"
SE_AGENT_DIR = "$NFC_ROOT_DIR/interfaces/native_cpp/se_standard"