# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

SUBSYSTEM_DIR = "//foundation/communication"
NFC_KITS_PATH = "$SUBSYSTEM_DIR/nfc/interfaces/kits/nfckit"
NFC_ADAPTER_DIR = "$SUBSYSTEM_DIR/nfc/adapter"

java_library("nfckit_java") {
  java_files = [
    "$NFC_KITS_PATH/java/ohos/nfc/INfcController.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcControllerProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcController.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcKitsUtils.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcPermissionException.java",
    "$NFC_KITS_PATH/java/ohos/nfc/package-info.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcCommProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/ProfileParcel.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcAbilityManager.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/Aid.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/Channel.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/Session.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/ISecureElement.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/SecureElementProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/ISecureElementCallback.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/SecureElementCallbackProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/SEService.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/Reader.java",
    "$NFC_KITS_PATH/java/ohos/nfc/oma/package-info.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/TagInfo.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/ResponseInfo.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NfcATag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/MifareClassicTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/IsoDepTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/TagManager.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NfcTagProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/ITagInfo.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/package-info.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/CardEmulationProxy.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/CardEmulation.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/ICardEmulation.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/OffHostService.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/HostService.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/package-info.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NdefTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NdefMessage.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/MessageRecord.java",
    "$NFC_KITS_PATH/java/ohos/nfc/NfcErrCodes.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NfcBTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/MifareUltralightTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/cardemulation/AidGroup.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NfcFTag.java",
    "$NFC_KITS_PATH/java/ohos/nfc/tag/NfcVTag.java",
  ]
  deps = [
    "$NFC_ADAPTER_DIR/interfaces/kits/nfc:nfckit_adapter_java",
    "//utils/java:utils_maple_java",
  ]

  external_deps = [
    "ability:abilitykit_java_maple",
    "ability:dataability_java_maple",
    "ans:intentagent_base_java_maple",
    "ans:intentagent_kit_java_maple",
    "appexecfwk:abilityshell_java_maple",
    "appexecfwk:appexecfwk_base_java_maple",
    "appexecfwk:appexecfwk_java_maple",
    "appexecfwk:eventhandler_java_maple",
    "ces:ces_adapter_java_maple",
    "graphic:agp_java",
    "hilog:hilog_maple_java",
    "intent:intent_java_maple",
    "ipc:ipc_maple_java",
    "samgr:samgr_java_maple",
  ]

  if (is_double_framework && !mrt) {
    dex_path = "${target_out_dir}/nfc.z.jar"
    subsystem_name = "communication"
  }

  part_name = "nfc"
  subsystem_name = "communication"
}

ohos_maple_java("nfckit_maple_java") {
  deps = [ ":nfckit_java" ]
  so_name = "nfc"
  output_dir = "$root_build_dir/communication/nfc"

  part_name = "nfc"
  subsystem_name = "communication"
}
