# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/nfc/services/nfc_standard/nfc_standard.gni")

config("nfc_agent_config") {
  visibility = [ ":*" ]
  defines = [ "DEBUG", "_NFC_SERVICE_READER_" , "_NFC_SERVICE_HCE_"]
  cflags_cc = [ "-fexceptions" ]

  include_dirs = []
}

config("nfc_agent_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/communication/ipc/interfaces/innerkits/ipc_core/include",
    "//foundation/appexecfwk_L2/kits/appkit/native/app/include",
    "$NFC_STANDARD_DIR/include",
    "$NFC_AGENT_DIR/src",
    "$NFC_AGENT_DIR/src/sdk-reader/include",
    "$NFC_AGENT_DIR/include",
    "$NFC_AGENT_DIR/include/sdk-cardemulation",
    "$NFC_AGENT_DIR/src/sdk-cardemulation/include",
    "$NFC_AGENT_DIR/src/sdk-cardemulation/src",
  ]
}

ohos_shared_library("nfc_agent") {
  sources = [
    "$NFC_AGENT_DIR/src/app_callback_proxy.cpp",
    "$NFC_AGENT_DIR/src/app_callback_stub.cpp",
    "$NFC_AGENT_DIR/src/nfc_agent.cpp",
    "$NFC_AGENT_DIR/src/nfc_sdk_common.cpp",
    "$NFC_AGENT_DIR/src/nfc_basic_proxy.cpp",
    "$NFC_AGENT_DIR/src/tag_session_proxy.cpp",
    "$NFC_AGENT_DIR/src/nfc_service_proxy.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/basic_tag_session.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/iso15693_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/isodep_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/mifare_classic_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/mifare_ultralight_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/ndef_formatable_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/ndef_message.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/ndef_tag.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/nfc_ability_manager.cpp",
    "$NFC_AGENT_DIR/src/sdk-reader/src/tag.cpp",
    "$NFC_AGENT_DIR/src/nfc_map.cpp",

"$NFC_AGENT_DIR/src/sdk-cardemulation/src/apdu_channel.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/card_emulation_agent_proxy.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/card_emulation_service_info_lite.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/host_card_emulation.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/offhost_card_emulation.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/ihost_card_emulation_service.cpp",
"$NFC_AGENT_DIR/src/sdk-cardemulation/src/card_emulation.cpp",
  ]

  configs = [ ":nfc_agent_config" ]

  public_configs = [ ":nfc_agent_public_config" ]

  deps = [
    "//utils/native/base:utils",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/services/abilitymgr:abilityms",
    "//foundation/appexecfwk/standard/kits:appkit_native",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "aafwk_standard:base",
    "aafwk_standard:ability_manager",
    "aafwk_standard:want",
    "samgr_L2:samgr_proxy",
    "appexecfwk_standard:appexecfwk_base",
    "appexecfwk_standard:appexecfwk_core",
    "appexecfwk_standard:libeventhandler",
  ]

  part_name = "nfc_standard"
  subsystem_name = "communication"
}
