# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/nfc/services/nfc_standard/nfc_standard.gni")

config("nfc_osal_config") {
  visibility = [ ":*" ]
  defines = [ "DEBUG", "ST21NFC", "VENDOR_BUILD_FOR_FACTORY" ]
  cflags_cc = [ "-fexceptions" ]
  include_dirs = [
    "//utils/native/base/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_preferences/include",
    "src",
    "include",
  ]
}

ohos_shared_library("osal") {
  sources = [
    "$NFC_OSAL_DIR/src/context.cpp",
    "$NFC_OSAL_DIR/src/bundle_manager.cpp",
    "$NFC_OSAL_DIR/src/resources.cpp",
    "$NFC_OSAL_DIR/src/shared_preferences.cpp",
    "$NFC_OSAL_DIR/src/key_guard_manager.cpp",
    "$NFC_OSAL_DIR/src/power_manager.cpp",
  ]

  public_configs = [ ":nfc_osal_config" ]
  
  deps = [
    "//utils/native/base:utils",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_preferences:native_preferences",
 ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "aafwk_standard:base",
    "aafwk_standard:want"
  ]

  part_name = "se_standard"
  subsystem_name = "communication"
}
