# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
SUBSYSTEM_DIR = "//foundation/communication"
module_output_path = "nfc/service"
NFC_SA_ROOT = "$SUBSYSTEM_DIR/nfc/services/nfc"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [ "$NFC_SA_ROOT/test" ]
}

##############################unittest##########################################
ohos_unittest("NfcManagerServiceTest") {
  module_out_path = module_output_path

  include_dirs = [
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "$NFC_SA_ROOT/include",
  ]
  sources = [ "unittest/nfc_sa_unit_test.cpp" ]

  configs = [ ":module_private_config" ]

  deps = [
    "$NFC_SA_ROOT:nfc",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "appexecfwk:appexecfwk_base",
    "appexecfwk:libeventhandler",
    "ces:libcommonevent",
    "hilog:libhilog",
    "intent:base",
    "intent:intent",
    "ipc:ipc_core",
    "permission:permission_sdk_cxx",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  part_name = "nfc"
  subsystem_name = "communication"
}

###############################################################################
group("unittest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    ":NfcManagerServiceTest",
  ]
}
###############################################################################
