#
# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

import("//build/ohos.gni")
import("//foundation/communication/nfc/services/nfc_standard/nfc_standard.gni")

group("test_case_target") {
    deps = [
#        "testcase:nfc_test_case",
#        "test_event_handler:test_event_handler",
        "nfc_service:nfc_service_test",
#         "nfc_se:nfc_se_test",
#        "test_rpc/test_rpc_lib:test_rpc_lib",
#        "test_rpc/test_rpc_server:test_rpc_server",
#        "test_rpc/test_rpc_client:test_rpc_client",
#         "test_broadcast/publisher:publisher",
#         "test_broadcast/receiver:receiver",
    ]
}
